--- a/index.html
+++ b/index.html
@@ -2,179 +2,26 @@
 <html lang="uz">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=430, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Qidiruv</title>
-  <style>
-    * { box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
-
-    body {
-      margin: 0;
-      width: 430px;
-      height: 932px;
-      background: #fff;
-      color: #202124;
-      overflow: hidden;
-      position: relative;
-    }
-
-    /* Header */
-    header {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 16px;
-      gap: 14px;
-      font-size: 14px;
-    }
-
-    .apps {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      display: grid;
-      place-items: center;
-      cursor: pointer;
-    }
-
-    .apps:hover { background: #f1f3f4; }
-
-    .avatar {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      background: #1a73e8;
-      color: #fff;
-      display: grid;
-      place-items: center;
-      font-weight: bold;
-    }
-
-    main {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 24px;
-      transition: all 0.4s ease;
-    }
-
-    main.active {
-      justify-content: flex-start;
-      padding-top: 96px;
-    }
-
-    .logo {
-      font-size: 64px;
-      font-weight: bold;
-      letter-spacing: -3px;
-      margin-bottom: 24px;
-      transition: all 0.4s ease;
-    }
-
-    main.active .logo { margin-bottom: 12px; }
-
-    .logo span:nth-child(1){color:#4285f4}
-    .logo span:nth-child(2){color:#ea4335}
-    .logo span:nth-child(3){color:#fbbc05}
-    .logo span:nth-child(4){color:#4285f4}
-    .logo span:nth-child(5){color:#34a853}
-    .logo span:nth-child(6){color:#ea4335}
-
-    .search-box {
-      width: 100%;
-      border: 1px solid #dfe1e5;
-      border-radius: 24px;
-      padding: 14px 16px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      box-shadow: 0 1px 6px rgba(32,33,36,.28);
-      background: #fff;
-    }
-
-    .search-box input {
-      flex: 1;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    /* Ads */
-    .ads {
-      margin-top: 24px;
-      width: 100%;
-      transition: all 0.3s ease;
-    }
-
-    .ad {
-      padding: 14px;
-      border-bottom: 1px solid #e0e0e0;
-    }
-
-    .ad span {
-      font-size: 12px;
-      color: #1a73e8;
-    }
-
-    .ad p {
-      margin: 4px 0 0;
-      font-size: 14px;
-    }
-
-    main.active .ads { display: none; }
-
-    .result {
-      margin-top: 24px;
-      text-align: center;
-      display: none;
-    }
-
-    .result h3 { font-size: 18px; margin-bottom: 6px; }
-    .result p { font-size: 14px; color: #5f6368; }
-
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background: #f2f2f2;
-      padding: 12px;
-      text-align: center;
-      font-size: 13px;
-      color: #70757a;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 
-<header>
+<header class="top-bar">
   <div class="apps">⋮⋮</div>
   <div class="avatar">R</div>
 </header>
 
-<main id="main">
+<main>
   <div class="logo">
     <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span>
   </div>
 
-  <form class="search-box" onsubmit="search(event)">
-    🔍
+  <form class="search-box" id="searchForm">
+    <span class="icon">🔍</span>
     <input type="text" id="query" placeholder="Google’da qidirish" />
   </form>
-
-  <div class="ads" id="ads">
-    <div class="ad">
-      <span>Reklama</span>
-      <p>Biznesingiz uchun zamonaviy veb-sayt</p>
-    </div>
-    <div class="ad">
-      <span>Reklama</span>
-      <p>Onlayn xizmatlar – barchasi bitta sahifada</p>
-    </div>
-  </div>
 
   <div class="result" id="result">
     <h3>Afsuski, hech narsa topilmadi</h3>
@@ -184,22 +31,6 @@
 
 <footer>Oʻzbekiston</footer>
 
-<script>
-  function search(e) {
-    e.preventDefault();
-    const q = document.getElementById('query').value.trim();
-    const main = document.getElementById('main');
-    const result = document.getElementById('result');
-
-    if (q) {
-      main.classList.add('active');
-      result.style.display = 'block';
-    } else {
-      main.classList.remove('active');
-      result.style.display = 'none';
-    }
-  }
-</script>
-
+<script src="./app.js"></script>
 </body>
 </html>
